logs/archive/check_output_2.txt
warning: unused import: `once_cell::sync::Lazy`
 --> common\src\lib.rs:8:5
  |
8 | use once_cell::sync::Lazy;
  |     ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `common` (lib) generated 1 warning (run `cargo fix --lib -p common` to apply 1 suggestion)
    Checking frontend v0.1.0 (C:\Users\Trinity\Documents\daydream\Day_Dream\frontend)
error[E0277]: the trait bound `Callback<Vec<StoryNode>>: From<{closure@node_canvas.rs:328:38}>` is not satisfied
   --> frontend\src\components\authoring\node_canvas.rs:325:17
    |
325 | /                  view! {
326 | |                      <TemplateSelector
327 | |                          on_close=move || set_show_template_selector.set(false)
328 | |                          on_generate={move |new_nodes: Vec<StoryNode>| {
    | | _________________________-----------__-
    | ||                         |
    | ||                         required by a bound introduced by this call
329 | ||                             // Add generated nodes to canvas
330 | ||                             for node in new_nodes {
331 | ||                                 set_nodes.update(|n| n.push(RwSignal::new(node)));
332 | ||                             }
333 | ||                         }}
    | ||_________________________- this tail expression is of type `{closure@node_canvas.rs:328:38}`
334 | |                      />
335 | |                  }.into_any()
    | |__________________^ unsatisfied trait bound
    |
    = help: the trait `From<{closure@frontend\src\components\authoring\node_canvas.rs:328:38: 328:70}>` is not implemented for `leptos::prelude::Callback<Vec<StoryNode>>`
    = help: the following other types implement trait `From<T>`:
              leptos::prelude::Callback<(), Out>
              leptos::prelude::Callback<(P1, P2), Out>
              leptos::prelude::Callback<(P1, P2, P3), Out>
              leptos::prelude::Callback<(P1, P2, P3, P4), Out>
              leptos::prelude::Callback<(P1, P2, P3, P4, P5), Out>
              leptos::prelude::Callback<(P1, P2, P3, P4, P5, P6), Out>
              leptos::prelude::Callback<(P1, P2, P3, P4, P5, P6, P7), Out>
              leptos::prelude::Callback<(P1, P2, P3, P4, P5, P6, P7, P8), Out>
            and 5 others
    = note: required for `{closure@frontend\src\components\authoring\node_canvas.rs:328:38: 328:70}` to implement `Into<leptos::prelude::Callback<Vec<StoryNode>>>`
note: required by a bound in `TemplateSelectorPropsBuilder::<(__on_close, ())>::on_generate`
   --> frontend\src\components\authoring\template_selector.rs:13:1
    |
 13 | #[component]
    | ^^^^^^^^^^^^ required by this bound in `TemplateSelectorPropsBuilder::<(__on_close, ())>::on_generate`
...
 16 |     #[prop(into)] on_generate: Callback<Vec<StoryNode>>,
    |                   ----------- required by a bound in this associated function
    = note: the full name for the type has been written to 'C:\Users\Trinity\Documents\daydream\Day_Dream\target\debug\deps\frontend-b6404aaf522848af.long-type-14201789011749628172.txt'
    = note: consider using `--verbose` to print the full type name to the console
    = note: this error originates in the derive macro `::leptos::typed_builder_macro::TypedBuilder` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0277`.
error: could not compile `frontend` (lib) due to 1 previous error
